--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
-    "deno.enable": true,
-    "[typescript]": {
-        "editor.defaultFormatter": "denoland.vscode-deno",
-        "editor.formatOnSave": true,
-    }
+  "deno.enable": true,
+  "editor.defaultFormatter": "denoland.vscode-deno",
+  "editor.formatOnSave": true
 }
