Add YAML config to .editorconfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,10 @@
 root = true
 
 [*]
-# While space seems to be more popular than tabs, the argument that tabs are  
-# more accessible is compelling
 indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.{yaml, yml}]
+indent_style = space
+indent_size = 2
